--- a/cloudbuild.prod.yaml
+++ b/cloudbuild.prod.yaml
@@ -34,3 +34,6 @@ substitutions:
     _SERVICE_NAME     : my-docker-app-prod
     _DOCKER_REGISTRY  : docker-repo
     _DOCKER_IMAGENAME : myapp-prod
+
+options:
+  logging: CLOUD_LOGGING_ONLY
