--- a/cloudbuild.prod.yaml
+++ b/cloudbuild.prod.yaml
@@ -30,7 +30,7 @@ images: # Display the image in the build results - Build Artifacts
 substitutions:
     _SERVICE_IMAGE    : europe-west3-docker.pkg.dev/${PROJECT_ID}/${_DOCKER_REGISTRY}/${_DOCKER_IMAGENAME}:${SHORT_SHA}
     _SERVICE_REGION   : europe-west3
-    _SERVICE_PROJECT  : Game-Pic4shop
+    _SERVICE_PROJECT  : game-pic4shop
     _SERVICE_NAME     : my-docker-app-prod
     _DOCKER_REGISTRY  : docker-repo
     _DOCKER_IMAGENAME : myapp-prod
